# ffb_wheel

./: .gitignore  CMakeLists.txt  README.md
docs/: WIRING.md
firmware/: ffb_wheel.uf2
src/: buttons.c  buttons.h  ffb.c  ffb.h  ffb_descriptors.h  ffb_types.h  main.c  mcp2515.c  mcp2515.h  odrive_can.c  odrive_can.h  pedals.c  pedals.h  tusb_config.h  usb_descriptors.c
